<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_card_names"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_items_number"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/tv_items_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/number_of_items"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/et_search"
        app:layout_constraintTop_toBottomOf="@+id/et_search" />

    <Button
        android:id="@+id/btn_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/translate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_add_name"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/edit_text_background_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_the_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_translate" />

    <Button

        android:id="@+id/btn_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/et_add_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_add_name"
        app:layout_constraintTop_toTopOf="@+id/et_add_name" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_background_color"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/et_add_name"
        app:layout_constraintTop_toBottomOf="@+id/et_add_name" />

</androidx.constraintlayout.widget.ConstraintLayout>